@@ -40,6 +40,8 @@ XXXX/XX/XX
 
   - #4275, Avoid passing a NULL pointer to GEOSisEmpty (Raúl Marín)
 
+  - #4296, Use `server_version_num` instead of parsing `version()` (Raúl Marín)
+
 PostGIS 2.5.1
 2018/11/18
 
